--- a/public/about/index.html
+++ b/public/about/index.html
@@ -12,19 +12,29 @@
     <meta name="theme-color" content="#48FF4B" />
     <title>Best Team Site</title>
     <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/hamburgers.css">
     <link rel="stylesheet" href="./style.css" />
+    <script defer src="./script.js"></script>
   </head>
   <body>
     <header>
-      <img src="https://i.imgur.com/ATqi16O.png" alt="logo" class="logo no-select no-drag">
+    <img src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/bestteam.png?v=1689690176861" alt="logo" class="logo no-select no-drag">
+      <button class="hamburger hamburger--collapse" type="button" id="activate" data-active="0">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
       
-      <h1>About</h1>
     </header>
-
+    <div id="sidebar">
+      <a href="/food-banks">Food Banks</a>
+    </div>
+    <div class="main-container">
     <main>
-      <p>
-        pp smelly poo poo
-      </p>
+      
     </main>
+    </div>
   </body>
 </html>
+<!--<a style="text-decoration:none" href = "/about" > </a>
+ -->
