--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <img id="about-popover" src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/question-solid.svg?v=1689262774927">
+    <a href="/about">
+      <img id="about-popover" src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/question-solid.svg?v=1689262774927">
+    </a>
     <header>
       <img src="https://i.imgur.com/ATqi16O.png" alt="logo" class="logo no-select no-drag">
       
@@ -42,7 +44,11 @@
       </a>
     </main>
     <footer>
-      About
+      <strong>Authors</strong>
+      <p><span class="rainbow_text_animated wes">Wes</span>, <span class="rainbow_text_animated andrew">Harry</span>, <span class="rainbow_text_animated andrew">Cole</span>, <span class="rainbow_text_animated andrew">Khasim</span>, <span class="rainbow_text_animated andrew">Julian</span>, <span class="rainbow_text_animated andrew">Andrew</span><br></p>
+      <p><small><small><small><small>
+        We are Best Team Services. This is a group dedicated to assisting against food insecurity. On this website, you will be shown various sites and locations to either guide you to places to get food or information on how to volunteer. The website includes sites such as volunteering options for nearby food banks, web apps to help people apply for gov help, and directing those suffering toward the nearest bank/pantry. We believe with this website we make it more convenient for users to access this type of information with a few clicks and reduce or possibly stop hunger.
+     </small></small></small></small></p>
     </footer>
   </body>
 </html>
