☎️👾 Updated with Glitch

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -11,30 +11,131 @@
     <meta name="description" content="another god damn description." />
     <meta name="theme-color" content="#48FF4B" />
     <title>Best Team Site</title>
-    <link rel="stylesheet" href="/main.css" />
-    <link rel="stylesheet" href="/hamburgers.css">
+    <link rel="stylesheet" href="/hamburgers.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/main.css" />
     <script defer src="./script.js"></script>
   </head>
   <body>
     <header>
-    <img src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/bestteam.png?v=1689690176861" alt="logo" class="logo no-select no-drag">
-      <button class="hamburger hamburger--collapse" type="button" id="activate" data-active="0">
+      <img
+        src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/image-removebg-preview%20(1).png?v=1690221893010"
+        alt="logo"
+        class="logo no-select no-drag"
+      />
+      <button
+        class="hamburger hamburger--collapse"
+        type="button"
+        id="activate"
+        data-active="0"
+      >
         <span class="hamburger-box">
           <span class="hamburger-inner"></span>
         </span>
       </button>
-      
     </header>
     <div id="sidebar">
-      <a href="/food-banks">Food Banks</a>
+      <b><a style="text-decoration: none" href="/">Main Page</a></b>
+      <b><a style="text-decoration: none" href="/food-banks">Food Banks</a></b>
+      <b><a style="text-decoration: none" href="/volunteer">Volunteering</a></b>
+      <b><a style="text-decoration: none" href="/gov">Gov Help</a></b>
+      <b><a style="text-decoration: none" href="/about">About</a></b>
     </div>
-    <div class="main-container">
     <main>
-      
+      <h1 class="title">PLICA Team</h1>
+
+      <div class="authors">
+        <div class="profile">
+          <img
+            class="pfp no-select no-drag"
+            src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/IMG_4446.jpg?v=1690306341046"
+            alt=""
+          />
+          <div class="nameplate">
+            <span class="name rainbow-text wes">Wes</span>
+            <span>Rising senior. CS/Business student who hates JS. <br>($Lucky Spawn$)<br>(Data Science)</span>
+          </div>
+        </div>
+        <div class="profile">
+          <img
+            class="pfp no-select no-drag"
+            src="https://media.discordapp.net/attachments/820472866427502592/1098995011774857286/Hamter_Squish_HD.gif"
+            alt=""
+          />
+          <div class="nameplate">
+            <span class="name rainbow-text julian">Julian</span>
+            <span>Friendly neighborhood JS lover and rising senior<br>(HCI)</span>
+          </div>
+        </div>
+        <div class="profile">
+          <img
+            class="pfp no-select no-drag"
+            src="https://cdn.discordapp.com/attachments/1128333544830292159/1130561526076547276/thumbnail.jpg"
+            alt=""
+          />
+          <div class="nameplate">
+            <a href="https://twitter.com/CATBOYDEFENDER"><span class="name rainbow-text andrew">Andrew</span></a>
+            <span>boy kisser<br>(Full Stack)</span>
+          </div>
+        </div>
+        <div class="profile">
+          <img
+            class="pfp no-select no-drag"
+            src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/IMG_1452.jpg?v=1690241551698"
+            alt=""
+          />
+          <div class="nameplate">
+            <span class="name rainbow-text cole">Cole</span>
+            <span>I'm Cole, I mainly just focused in the cs and the looks of the website!<br>(Full Stack)</span>
+          </div>
+        </div>
+        <div class="profile">
+          <img
+            class="pfp no-select no-drag"
+            src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/ezgif-3-8441c787f4.jpg?v=1690305708274"
+            alt=""
+          />
+          <div class="nameplate">
+          <span class="name rainbow-text harry" >Harry</span>
+            <span>Rising senior. Helped with coding and some design.<br>(Full Stack)</span>
+          </div>
+        </div>
+        <div class="profile">
+          <img
+            class="pfp no-select no-drag"
+            src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/ezgif-3-e6718334f1.gif?v=1690241125775"
+            alt=""
+          />
+          <div class="nameplate">
+            <span class="name rainbow-text khasim">Khasim</span>
+            <span>Rising Sophomore helped with information such as the government page and statistics also helped create a logo<br>(Data Science)</span>
+          </div>
+        </div>
+      </div>
+
+      <p>
+        Food insecurity—the condition assessed in the food security survey and
+        represented in USDA food security reports—is a household-level
+        economic and social condition of limited or uncertain access to
+        adequate food. Hunger is an individual-level physiological condition
+        that may result from food insecurity.
+      </p>
+      <p>
+        We are <strong>PLICA</strong> (aka "The Philadelphia Local Initiative for Community
+        Assistance"). We are a group dedicated to assisting against food
+        insecurity. On this website, you will be shown various sites and
+        locations to either guide you to places to get food or information on
+        how to volunteer. The website includes sites such as volunteering
+        options for nearby food banks, web apps to help people apply for gov
+        help, and directing those suffering toward the nearest bank/pantry. We
+        believe with this website we make it more convenient for users to
+        access this type of information with a few clicks and reduce or
+        possibly stop hunger.
+      </p>
     </main>
-    </div>
+    <footer>
+      <br>
+      <center>PLICA 2023</center>
+    </footer>
   </body>
 </html>
-<!--<a style="text-decoration:none" href = "/about" > </a>
- -->
