--- a/public/index.html
+++ b/public/index.html
@@ -13,42 +13,48 @@
       content="Simply the best team site facing food in security."
     />
     <meta name="theme-color" content="#48FF4B" />
+    <link href="/hamburgers.css" rel="stylesheet" />
     <title>Best Team Site</title>
    <link rel="stylesheet" href="/main.css" />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   </head>
   <body>
     <a href="/about">
       <img id="about-popover" src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/question-solid.svg?v=1689262774927">
     </a>
     <header>
-      <img src="https://i.imgur.com/ATqi16O.png" alt="logo" class="logo no-select no-drag">
+      <img src="https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/image-removebg-preview%20(1).png?v=1690221893010" alt="logo" class="logo no-select no-drag">
       
-      <h1>Best Team Site</h1>
+      <h1 >The Philadelphia Local Initiative for Community Assistance</h1>
     </header>
     <main>
       <a href="/food-banks">
         <div class="card">
-          <h1>Locate Local Food Banks</h1>
+          <i class="fa-solid fa-carrot"></i>
+          <span>Locate Local Food Banks</span>
+          <i class="fa-solid fa-store"></i>
         </div>
       </a>
       <a href="/volunteer">
         <div class="card">
-          <h1>Learn More About Volunteering</h1>
+          <i class="fa-solid fa-piggy-bank"></i>
+          <span>Learn More About Volunteering</span>
+          <i class="fa-solid fa-comments-dollar"></i>
         </div>
       </a>
       <a href="/gov">
         <div class="card">
-          <h1>Find Government Help</h1>
+          <i class="fa-solid fa-link"></i>
+          <span>Find Government Help</span>
+          <i class="fa-solid fa-building-columns"></i>
         </div>
       </a>
     </main>
     <footer>
-      <strong>Authors</strong>
-      <p><span class="rainbow_text_animated wes">Wes</span>, <span class="rainbow_text_animated andrew">Harry</span>, <span class="rainbow_text_animated andrew">Cole</span>, <span class="rainbow_text_animated andrew">Khasim</span>, <span class="rainbow_text_animated andrew">Julian</span>, <span class="rainbow_text_animated andrew">Andrew</span><br></p>
-      <p><small><small><small><small>
-        We are Best Team Services. This is a group dedicated to assisting against food insecurity. On this website, you will be shown various sites and locations to either guide you to places to get food or information on how to volunteer. The website includes sites such as volunteering options for nearby food banks, web apps to help people apply for gov help, and directing those suffering toward the nearest bank/pantry. We believe with this website we make it more convenient for users to access this type of information with a few clicks and reduce or possibly stop hunger.
-     </small></small></small></small></p>
+      <p>
+        <center>PLICA 2023</center>
+      </p>
     </footer>
   </body>
 </html>
